[package]
name = "openhands-agolos"
version = "0.1.0"
edition = "2021"
description = "AGOLOS safety primitives for OpenHands: LTL Monitor, TraumaRegistry, Causal Debugger"
license = "MIT"

[lib]
name = "openhands_agolos"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Math operations for DAGMA
nalgebra = "0.32"

# Hashing for trauma context
blake3 = "1.5"

# LRU cache for trauma
lru = "0.12"

# SQLite persistence
rusqlite = { version = "0.30", features = ["bundled"] }

# Time handling
chrono = "0.4"

# Logging
log = "0.4"
env_logger = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random for DAGMA initialization
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
