[package]
name = "openhands-agolos"
version = "0.2.0"
edition = "2021"
description = "AGOLOS cognitive primitives for OpenHands: DAGMA causal reasoning, LTL Monitor, TraumaRegistry, HolographicMemory"
license = "MIT"

[lib]
name = "openhands_agolos"
crate-type = ["cdylib", "rlib"]

# Feature flags for modular compilation
[features]
default = ["causal-dagma", "safety-core"]
# Full DAGMA causal reasoning with warm start and counterfactuals
causal-dagma = []
# Holographic associative memory (FFT-based)
memory-holographic = ["rustfft", "num-complex"]
# Core safety primitives (LTL, Circuit Breaker, Trauma)
safety-core = []
# All cognitive modules
full = ["causal-dagma", "memory-holographic", "safety-core"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Math operations for DAGMA
nalgebra = "0.32"

# FFT for HolographicMemory (optional)
rustfft = { version = "6.1", optional = true }
num-complex = { version = "0.4", optional = true }

# Hashing for trauma context
blake3 = "1.5"

# LRU cache for trauma
lru = "0.12"

# SQLite persistence
rusqlite = { version = "0.30", features = ["bundled"] }

# Time handling
chrono = "0.4"

# Logging
log = "0.4"
env_logger = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random for DAGMA initialization
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
